css/queries.css
/* 320px (iPhone) */
@media screen and (max-width:320px) {
}
/* 480px (WVGA - Low End Windows Phone) */
@media screen and (max-width:480px) {
	.wrapper { background: #f3f5f8; height: 640px; }
	.iphone { display: none; }
	.fluid-white { display: none; }
	.wp2, .wp4, .wp5, .light-box { margin-bottom: 30px; }
	.legals { text-align: center; margin: 0; padding: 0; }
	.credit { text-align: center; }
}
/* xGA iPad */
@media screen and (max-width:1024px) {
	.wp3 { background-position: 50px 0; }
	.swag { background-attachment: scroll; }
	.subscribe { background-attachment: scroll; }
}
/* 1200px (Small Desktop, Netbook) */
@media screen and (max-width:1280px) {
	.wp3 { background-position: 50px 0; }
}
/* Bootstrap 990px Breakpoint to px 768px*/
@media screen and (max-width:991px) { 
	.iphone { display: none; }
	.fluid-white { display: none; }
	.wrapper { background: #f3f5f8; height: 540px; }
	.wp2, .wp4, .wp5, .light-box { margin-bottom: 30px; }
	.legals { text-align: center; margin: 0; padding: 0; }
	.credit { text-align: center; }
	.top-nav { width: 87%;}
}

@media screen and (max-width: 876px) {
	nav { background-color: #3DC9B3; } 
	nav ul {display: block; }
	nav ul li {border-bottom: 1px dotted rgba(255, 255, 255, 0.4); }
	nav ul li a {display: block; padding-left: 0; }
	nav ul li:last-child { border: none; }
	.indicator { display: inline-block; position: absolute; right: 0 !important; }
} 

